--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --main-bg-color: #2B3D41;
     --secondary-bg-color: #4C5F6B;
-    --text-color: #E0E2DBFF;
+    --text-color: #E0E2DB;
     --highlight-color: #A37774;
 }
 
@@ -9,3 +9,68 @@ body {
     overflow-x: hidden;
     background-color: var(--main-bg-color);
 }
+
+nav {
+    height: 5vh;
+    width: 90vw;
+    margin: 0;
+    padding: 0;
+    background-color: var(--secondary-bg-color);
+    border-radius: 1vh;
+    display: grid;
+    gap: 1vw;
+    grid-template-areas: 
+    'home links about';
+    position: sticky;
+    top: 1vh;
+    left: 5vw;
+}
+
+nav>a {
+    position: relative;
+    text-align: center;
+    font-size: 2.5vh;
+    text-decoration: none;
+    color: var(--text-color);
+    top: 1.25vh;
+}
+
+nav>a::after {
+    content: "";
+    height: 0.25vh;
+    width: 0%;
+    display: block;
+    background-color: var(--highlight-color);
+    transition: 500ms;
+    position: relative;
+    left: 50%;
+}
+
+nav>a:hover::after {
+    width: 75%;
+    left: 12.5%;
+}
+
+#home {
+    height: 100vh;
+    width: 100vw;
+}
+
+#greeting-container {
+    position: relative;
+    display: grid;
+    gap: 0.2vh;
+    text-align: right;
+    width: 90vw;
+    top: 50vh;
+    transform: translateY(-50%);
+}
+
+#greeting-container>label {
+    font-size: 3vh;
+    color: var(--text-color);
+}
+
+#home-link-nav { grid-area: home;}
+#links-link-nav { grid-area: links;}
+#about-link-nav { grid-area: about;}
