--- a/style.css
+++ b/style.css
@@ -77,6 +77,23 @@ nav>a:hover::after {
     border-radius: 1vh;
 }
 
+@media only screen and (max-width: 350px) {
+    nav>a {
+        display: none;
+    }
+
+    nav {
+        width: 2.5vh;
+        left: 50vw;
+        transform: translateX(-50%);
+    }
+
+    #togleLightmode {
+        position: relative;
+        left: -5vw;
+    }
+}
+
 #togleLightmode:hover {
     filter: invert(1);
 }
@@ -135,6 +152,12 @@ nav>a:hover::after {
     left: 75vw;
 }
 
+@media only screen and (max-width: 550px) {
+    #scroll-down-greetings-container {
+        left: 50vw;
+    }
+}
+
 #links {
     position: relative;
     padding-top: 20vh;
@@ -155,6 +178,24 @@ nav>a:hover::after {
 
 .social-links:hover {
     transform: scale(1.5);
+}
+
+@media only screen and (max-width: 820px) {
+    .social-links {
+        padding: 1.5vh;
+    }
+}
+
+@media only screen and (max-width: 330px) {
+    .social-links {
+        padding: 1vh;
+    }
+}
+
+@media only screen and (max-width: 300px) {
+    .social-links {
+        padding: 0;
+    }
 }
 
 #social-links-container {
@@ -234,6 +275,12 @@ nav>a:hover::after {
     height: 20vh;
     width: 46vw;
     margin: 1vw;
+}
+
+@media only screen and (max-width: 250px) {
+    .project-title-label {
+        font-size: 3vw;
+    }
 }
 
 #project-01-dot { grid-area: rps-py-dot;}
