--- a/style.css
+++ b/style.css
@@ -349,7 +349,7 @@ nav>a:hover::after {
 #cookiePrompt {
     height: 100vh;
     width: 100vw;
-    position: sticky;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
