added stylesheet for every section

--- a/style/section0.css
+++ b/style/section0.css
@@ -4,6 +4,7 @@
     width: 95vw;
     text-align: right;
     display: grid;
+    transform: translateY(-50%);
 }
 
 #section0>#greetings-container>label {
