--- a/style/style.css
+++ b/style/style.css
@@ -12,6 +12,7 @@
 body {
     background-color: var(--main-bg-color);
     font-family: 'Roboto Mono', monospace;
+    overflow: hidden;
 }
 
 .sections {
