--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,7 @@ body {
     font-family: 'Roboto Mono', monospace;
     overflow: hidden;
     margin: 0;
+    color-scheme: light dark;
 }
 
 .sections {
