--- a/style/style.css
+++ b/style/style.css
@@ -19,27 +19,13 @@ body {
 
 .sections {
     position: absolute;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
 
 label {
     color: var(--text-color);
-}
-
-footer {
-    z-index: 1000;
-    bottom: 0;
-    height: 5%;
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    text-transform: uppercase;
-    align-items: center;
-    background-color: var(--secondary-bg-color);
-    width: 100%;
-    color: var(--text-color);
-    font-size: 1.5rem;
 }
 
 #progress-bar {
