--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,12 @@
 :root {
     font-family: 'Roboto', sans-serif;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 body {
     color: var(--text);
+    margin: 0;
 }
 
 h1 {
@@ -16,7 +18,6 @@ p {
 }
 
 .section {
-    min-height: 100vh;
     width: 90%;
     padding-inline: 5%;
 }
@@ -31,6 +32,7 @@ p {
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
+    min-height: 100vh;
 }
 
 
@@ -51,5 +53,79 @@ p {
 @media only screen and (800px <= width <= 1200px) {
     .about-article {
         max-width: 40%;
+    }
+}
+
+.section:not(:nth-child(1)) {
+    padding-top: 7rem;
+}
+
+.project {
+    background-color: var(--bg-mix);
+    border-radius: 15px;
+}
+
+.project-wrapper {
+    display: flex;
+    padding-inline: 3%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+@media only screen and (max-width: 700px) {
+    .project-wrapper {
+        flex-direction: column;
+    }
+}
+
+.project-link {
+    text-decoration: none;
+}
+
+.project-link::after,
+.project-link::before {
+    content: "";
+    width: 0;
+    height: 10px;
+    position: relative;
+    display: block;
+}
+
+@media (hover: hover) {
+    .project-link::after,
+    .project-link::before {
+        border-radius: 100vh;
+        left: 50%;
+        --percentage: 50%;
+        background: linear-gradient(var(--rotation), var(--buttons--secondary) var(--percentage), var(--buttons--mix));
+        transition: left 100ms, width 100ms;
+    }
+
+    .project-link::before {
+        --rotation: 90deg;
+    }
+
+    .project-link::after {
+        --rotation: -90deg;
+    }
+
+    .project-link:hover::after,
+    .project-link:hover::before {
+        width: 100%;
+        left: 0;
+        transition: left 500ms, width 500ms;
+    }
+}
+
+.project-wrapper>* {
+    max-width: 50%;
+    color: var(--text);
+    padding-inline: 5%;
+    word-wrap: break-word;
+}
+
+@media only screen and (min-width: 699px) {
+    .project-wrapper>.project-description {
+        text-align: end;
     }
 }
