add new color buttons--mix

--- a/style/variables.css
+++ b/style/variables.css
@@ -8,5 +8,6 @@
     --text-light: #F5EEF8;
     --accent: #CF1E65;
     --buttons--primary: #CE7CD7;
+    --buttons--mix: #924cae;
     --buttons--secondary: #571B84;
 }
